[gd_scene load_steps=5 format=2]

[ext_resource path="res://fonts/Roboto/Roboto-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/IrAlMenuScene.gd" type="Script" id=2]
[ext_resource path="res://resources/Menu-Selection-sound.mp3" type="AudioStream" id=3]

[sub_resource type="DynamicFont" id=1]
size = 42
font_data = ExtResource( 1 )

[node name="IrAlMenuScene" type="Control"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -250.0
margin_top = 5.0
margin_right = -10.0
margin_bottom = -659.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IrAlMenuButton" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -261.863
margin_right = 11.1367
margin_bottom = 56.0
custom_fonts/font = SubResource( 1 )
text = "5. Go to menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectionSoud" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="pressed" from="IrAlMenuButton" to="." method="_on_IrAlMenuButton_pressed"]
[connection signal="finished" from="SelectionSoud" to="." method="_on_SelectionSoud_finished"]
